Fix code readabilty on dark theme

--- a/less/variables.less
+++ b/less/variables.less
@@ -6,8 +6,8 @@
 
   // Code
   @code-bg: #fdf6e3;
-  @fedorafr-code-border: #eee8d5;
   @code-color: #657b83;
+  @fedorafr-code-border: #eee8d5;
 
   // Quote
   @fedorafr-quote-border: @config-primary-color;
@@ -28,9 +28,7 @@
   // Text color
 
   // Code
-  @code-bg: #002b36;
   @fedorafr-code-border: #073642;
-  @code-color: #fff;
 
   // Quote
   @fedorafr-quote-border: @config-primary-color;
